[tool.poetry]
name = "gmsg"
version = "0.1.7"
description = "Generates git commit messages for you using AI."
authors = ["Shiyan Shirani <shiyan99s@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gmsg" }]
keywords = ["git", "commit", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.9.5"
google-genai = ">=1.9.0,<2.0.0"
cryptography = "^45.0.2"

[tool.poetry.scripts]
gmsg = "gmsg.gmsg:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
